src/objects/Marketing_Inventory_Item__c.object
<CustomObject>
    <description>Marketing Inventory Items are the items in which Marketing Inventory Orders consist of. They are the pens, bottles, etc. The physical goods.</description>
    <fields>
        <fullName>Marketing_Inventory__c</fullName>
        <label>Marketing Inventory</label>
        <referenceTo>Marketing_Inventory__c</referenceTo>
        <relationshipLabel>Marketing Inventory Items</relationshipLabel>
        <relationshipName>Marketing_Inventory_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <description>This is the price of one unit of this item.</description>
        <inlineHelpText>This is the price of one unit of this item.</inlineHelpText>
        <label>Unit Price</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Units_Available__c</fullName>
        <formula>Units_In_Stock__c -  Units_Reserved__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Units Available</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Units_In_Stock__c</fullName>
        <formula>units_delivered__c - Units_Used__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Units In Stock</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Units_Reserved__c</fullName>
        <description>The number of units reserved for campaigns that have not yet occurred.</description>
        <inlineHelpText>The number of units reserved for campaigns that have not yet occurred.</inlineHelpText>
        <label>Units Reserved</label>
        <summarizedField>Campaign_Inventory_Log__c.Inventory_Required__c</summarizedField>
        <summaryFilterItems>
            <field>Campaign_Inventory_Log__c.Inventory_Used__c</field>
            <operation>equals</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Campaign_Inventory_Log__c.Marketing_Inventory_Item__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Units_Used__c</fullName>
        <description>The number of units used in campaigns.</description>
        <inlineHelpText>The number of units used in campaigns.</inlineHelpText>
        <label>Units Used</label>
        <summarizedField>Campaign_Inventory_Log__c.Inventory_Used__c</summarizedField>
        <summaryForeignKey>Campaign_Inventory_Log__c.Marketing_Inventory_Item__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the organization of which this inventory was purchased from.</description>
        <inlineHelpText>This is the organization of which this inventory was purchased from.</inlineHelpText>
        <label>Vendor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Marketing Inventory Items</relationshipLabel>
        <relationshipName>Marketing_Inventory_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>units_delivered__c</fullName>
        <description>The total amount of units delivered to BlueWave.</description>
        <inlineHelpText>The total amount of units delivered to BlueWave.</inlineHelpText>
        <label>Units Delivered</label>
        <summarizedField>Marketing_Inventory_Item_Order__c.Quantity__c</summarizedField>
        <summaryFilterItems>
            <field>Marketing_Inventory_Item_Order__c.Status__c</field>
            <operation>equals</operation>
            <value>Delivered</value>
        </summaryFilterItems>
        <summaryForeignKey>Marketing_Inventory_Item_Order__c.Marketing_Inventory_Item__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Marketing Inventory Item</label>
    <nameField>
        <label>Marketing Inventory Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Marketing Inventory Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>